--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
-		<p>自分のPCでWebページを開発する方法を学習しましょう</p>
+		<p class="sub">自分のPCでWebページを開発する方法を学習しましょう</p>
   </body>
 </html>
